src/capi/fitpack_gridded_polar_c.f90

! **************************************************************************************************
!                                ____________________  ___   ________ __
!                               / ____/  _/_  __/ __ \/   | / ____/ //_/
!                              / /_   / /  / / / /_/ / /| |/ /   / ,<
!                             / __/ _/ /  / / / ____/ ___ / /___/ /| |
!                            /_/   /___/ /_/ /_/   /_/  |_\____/_/ |_|
!
!                                     A Curve Fitting Package
!
!   fitpack_gridded_polar_c.f90 (module fitpack_gridded_polar_c)
!> @brief C interface to fitpack_grid_polar
!
!   @author Federico Perini
!   @date   2026-08-27
!
!   References :
!     - C. De Boor, "On calculating with b-splines", J Approx Theory 6 (1972) 50-62
!     - M. G. Cox, "The numerical evaluation of b-splines", J Inst Maths Applics 10 (1972) 134-149
!     - P. Dierckx, "Curve and surface fitting with splines", Monographs on numerical analysis,
!                    Oxford university press, 1993.
!
! **************************************************************************************************

module fitpack_gridded_polar_c
    ! ===========================================================================================
    ! SECTION 1: Imports
    ! ===========================================================================================
    use fitpack_gridded_polar, only: fitpack_grid_polar
    use fitpack_gridded_polar_c_types, only: fitpack_grid_polar_c, fitpack_grid_polar_c_null, fitpack_grid_polar_c_typename
    use fitpack_fx_status, only: fx_status, fx_status_ok, FX_ERROR_ALLOCATION, &
                        FX_ERROR_DEALLOCATION, handle_error
    use, intrinsic :: iso_c_binding
    implicit none(type, external)
    private

    ! ===========================================================================================
    ! SECTION 2: Public Exports
    ! ===========================================================================================

    ! Core interfaces (ALWAYS export these)
    public :: fitpack_grid_polar_c            ! Type and constructor
    public :: fitpack_grid_polar_c_null       ! Null constant
    public :: f_pointer              ! Get Fortran pointer (non-allocating)
    public :: f_associated           ! Pointer-identity check (non bind(C))
    public :: fitpack_grid_polar_c_is_same   ! Pointer-identity check [bind(C)]
    public :: fitpack_grid_polar_c_allocate   ! Allocate new object [bind(C)]
    public :: fitpack_grid_polar_c_destroy    ! Deallocate object [bind(C)]
    public :: fitpack_grid_polar_c_copy       ! Deep copy [bind(C)]
    public :: fitpack_grid_polar_c_associate  ! Shallow copy/pointer [bind(C)]
    public :: fitpack_grid_polar_c_move_alloc ! Move ownership [bind(C)]

    ! Method wrappers
    public :: fitpack_grid_polar_c_set_origin_BC
    public :: fitpack_grid_polar_c_fit
    public :: fitpack_grid_polar_c_least_squares
    public :: fitpack_grid_polar_c_interpolate
    public :: fitpack_grid_polar_c_gridded_eval_one
    public :: fitpack_grid_polar_c_comm_size
    public :: fitpack_grid_polar_c_write
    public :: fitpack_grid_polar_c_mse
    public :: fitpack_grid_polar_c_core_comm_size
    public :: fitpack_grid_polar_c_destroy_base
    public :: fitpack_grid_polar_c_new_points
    public :: fitpack_grid_polar_c_new_fit
    public :: fitpack_grid_polar_c_gridded_eval_many
    public :: fitpack_grid_polar_c_comm_pack
    public :: fitpack_grid_polar_c_comm_expand
    public :: fitpack_grid_polar_c_core_comm_pack
    public :: fitpack_grid_polar_c_core_comm_expand
    public :: fitpack_grid_polar_c_getcomp_u
    public :: fitpack_grid_polar_c_getcomp_v
    public :: fitpack_grid_polar_c_getcomp_z
    public :: fitpack_grid_polar_c_getcomp_t
    public :: fitpack_grid_polar_c_ref_r
    public :: fitpack_grid_polar_c_ref_z0
    public :: fitpack_grid_polar_c_get_z0_present
    public :: fitpack_grid_polar_c_set_z0_present
    public :: fitpack_grid_polar_c_get_z0_exact
    public :: fitpack_grid_polar_c_set_z0_exact
    public :: fitpack_grid_polar_c_get_z0_zero_gradient
    public :: fitpack_grid_polar_c_set_z0_zero_gradient
    public :: fitpack_grid_polar_c_ref_nmax
    public :: fitpack_grid_polar_c_ref_bc_continuity_origin
    public :: fitpack_grid_polar_c_ref_bc_boundary

    ! ===========================================================================================
    ! SECTION 4: Fortran-Side Interfaces (NOT bind(C))
    ! ===========================================================================================

    !> Get pointer to embedded Fortran object
    interface f_pointer
        module procedure fitpack_grid_polar_c_get_pointer
    end interface f_pointer

    !> Pointer-identity check (Fortran-side wrapper of the bind(C) function).
    interface f_associated
        module procedure fitpack_grid_polar_c_is_same
    end interface f_associated

    !> Construct from Fortran object
    interface fitpack_grid_polar_c
        module procedure fitpack_grid_polar_c_f2c
        module procedure fitpack_grid_polar_c_fptr2c
    end interface fitpack_grid_polar_c

    !> Pointer view of a null-terminated C string: a `character(:,c_char),
    !> pointer` result aliasing the C buffer — no copy, no allocation.
    !> Always associated: a null, zero-length or ABSENT input yields a
    !> 0-length module sentinel, safe to pass to required `character(*)`
    !> dummies and to `trim()`. Two overloads:
    !>   * `f_char(c_str)` with `c_str` a `type(c_ptr)`
    !>   * `f_char(c_str)` with `c_str` a `character(*)` buffer (optional)
    !> Where the callee dummy is `optional`, use `f_char_opt` instead: it
    !> forwards an absent argument as a disassociated pointer, which an
    !> optional `character(*)` dummy reads as "not present" (F2018 15.5.2.12).
    interface f_char
        module procedure from_c_string_ptr_cptr
        module procedure from_c_string_ptr_arr
    end interface f_char

contains

    ! ===========================================================================================
    ! SECTION 5: Core Memory Management (ALWAYS IMPLEMENT)
    ! ===========================================================================================

    !> Pointer-identity check: true iff both wrappers point to the same
    !> underlying Fortran object (and that object is allocated).
    logical(c_bool) function fitpack_grid_polar_c_is_same(this, that) &
            bind(C, name='fitpack_grid_polar_c_is_same') result(same)
        type(fitpack_grid_polar_c), intent(in) :: this, that
        same = logical(c_associated(this%cptr, that%cptr), kind=c_bool)
    end function fitpack_grid_polar_c_is_same

    !> Get pointer to embedded Fortran object (non-allocating)
    function fitpack_grid_polar_c_get_pointer(this) result(fptr)
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fptr

        if (c_associated(this%cptr)) then
            call c_f_pointer(this%cptr, fptr)
        else
            nullify(fptr)
        end if
    end function fitpack_grid_polar_c_get_pointer

    !> Get/allocate embedded Fortran object (internal, not bind(C))
    !> Returns .true. on success, .false. on allocation failure
    function fitpack_grid_polar_c_pointer(this, fthis) result(success)
        type(fitpack_grid_polar_c), intent(inout) :: this
        type(fitpack_grid_polar), pointer, intent(inout) :: fthis
        logical :: success
        integer :: ierr

        success = .true.

        ! Try non-allocating get first
        fthis => f_pointer(this)

        ! Already associated: do nothing
        if (associated(fthis)) return

        ! Allocate if necessary
        allocate(fthis, stat=ierr)
        if (ierr /= 0) then
            success = .false.
            return
        end if

        ! Initialize and locate
        this%cptr = c_loc(fthis)
        this%is_pointer = .false._c_bool
        this%name_cptr = c_loc(fitpack_grid_polar_c_typename)
    end function fitpack_grid_polar_c_pointer

    !> [bind(C)] Allocate new object
    !> @param status Optional. If absent, allocation failure triggers error stop.
    subroutine fitpack_grid_polar_c_allocate(this, status) bind(C, name='fitpack_grid_polar_c_allocate')
        type(fitpack_grid_polar_c), intent(inout) :: this
        type(fx_status), intent(out), optional :: status
        type(fitpack_grid_polar), pointer :: fthis
        type(fx_status) :: stat0
        logical :: ok

        stat0 = fx_status_ok
        ok = fitpack_grid_polar_c_pointer(this, fthis)
        if (.not. ok) stat0 = fx_status(FX_ERROR_ALLOCATION, &
            'fitpack_grid_polar_c_allocate: allocation failed')
        call handle_error(stat0, status)
    end subroutine fitpack_grid_polar_c_allocate

    !> [bind(C)] Deallocate object
    !> @param status Optional. If absent, deallocation failure triggers error stop.
    subroutine fitpack_grid_polar_c_destroy(this, status) bind(C, name='fitpack_grid_polar_c_destroy')
        type(fitpack_grid_polar_c), intent(inout) :: this
        type(fx_status), intent(out), optional :: status
        type(fitpack_grid_polar), pointer :: fthis
        type(fx_status) :: stat0
        integer :: ierr

        stat0 = fx_status_ok
        fthis => f_pointer(this)
        if (associated(fthis) .and. .not. this%is_pointer) then
            deallocate(fthis, stat=ierr)
            if (ierr /= 0) stat0 = fx_status(FX_ERROR_DEALLOCATION, &
                'fitpack_grid_polar_c_destroy: deallocate failed')
        end if
        this = fitpack_grid_polar_c_null
        call handle_error(stat0, status)
    end subroutine fitpack_grid_polar_c_destroy

    !> [bind(C)] Copy. By default, mirrors source ownership: a view source
    !> yields a view (shallow handle copy); an owned source yields a deep
    !> copy via Fortran intrinsic assignment. Pass deep_copy=.true. to force
    !> a deep copy regardless of the source's ownership.
    !> @param deep_copy When .true., always allocate a fresh Fortran object
    !>                  and deep-copy data, even if the source is a view.
    !> @param status    Optional. If absent, errors trigger error stop.
    subroutine fitpack_grid_polar_c_copy(this, that, deep_copy, status) &
            bind(C, name='fitpack_grid_polar_c_copy')
        type(fitpack_grid_polar_c), intent(inout) :: this
        type(fitpack_grid_polar_c), intent(in)    :: that
        logical(c_bool),    intent(in), value :: deep_copy
        type(fx_status), intent(out), optional :: status
        type(fitpack_grid_polar), pointer :: fthis, fthat
        type(fx_status) :: stat0
        logical :: ok

        stat0 = fx_status_ok
        fthat => f_pointer(that)
        if (that%is_pointer .and. .not. deep_copy) then
            this = that
        elseif (associated(fthat)) then
            ok = fitpack_grid_polar_c_pointer(this, fthis)
            if (.not. ok) then
                stat0 = fx_status(FX_ERROR_ALLOCATION, &
                    'fitpack_grid_polar_c_copy: allocation failed')
                goto 100
            end if
            fthis = fthat
            this%name_cptr = that%name_cptr
        else
            call fitpack_grid_polar_c_destroy(this, stat0)
        end if
100     call handle_error(stat0, status)
    end subroutine fitpack_grid_polar_c_copy

    !> [bind(C)] Shallow copy (pointer semantics — Fortran "associate" construct)
    !> @param status Optional. If absent, errors trigger error stop.
    subroutine fitpack_grid_polar_c_associate(this, that, status) &
            bind(C, name='fitpack_grid_polar_c_associate')
        type(fitpack_grid_polar_c), intent(inout) :: this
        type(fitpack_grid_polar_c), intent(in)    :: that
        type(fx_status), intent(out), optional :: status
        type(fx_status) :: stat0
